add generic service for Author