@@ -1,11 +1,9 @@
 package com.example.demo.controllers;
 
-import com.example.demo.forms.BookForm;
+import com.example.demo.exceptions.AppValidationException;
 import com.example.demo.models.Author;
-import com.example.demo.models.Book;
 import com.example.demo.services.AuthorService;
 import com.example.demo.viewmodels.AuthorViewModel;
-import com.example.demo.viewmodels.BookViewModel;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -14,11 +12,13 @@ import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/admin/authors/")
 public class AuthorController {
+    private static final String INDEX_TEMPLATE = "author/index";
+    private static final String ACTION_TEMPLATE = "author/create";
+    private static final String INDEX_URL = "/admin/authors/";
 
     private final AuthorService authorService;
 
@@ -32,30 +32,17 @@ public class AuthorController {
         List<AuthorViewModel> list = authorService
                 .listAll()
                 .stream().map(authorService::mapToViewModel)
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("list", list);
-        return "author/index";
+        return INDEX_TEMPLATE;
     }
 
     @GetMapping("create")
     public String createPage(Model model) {
         AuthorViewModel form = new AuthorViewModel();
         model.addAttribute("form", form);
-        return "author/create";
-    }
-
-    @PostMapping("create")
-    public String handleCreate(
-            @Valid @ModelAttribute("form") AuthorViewModel form,
-            BindingResult result) {
-
-        if (result.hasErrors()) {
-            return "/author/create";
-        }
-
-        authorService.create(form);
-        return "redirect:/admin/authors/";
+        return ACTION_TEMPLATE;
     }
 
     @GetMapping("update/{id}")
@@ -65,34 +52,27 @@ public class AuthorController {
         Author entity = authorService.findById(id);
         AuthorViewModel form = authorService.mapToViewModel(entity);
         model.addAttribute("form", form);
-        return "author/update";
+        return ACTION_TEMPLATE;
     }
 
-    @PostMapping("update/{id}")
-    public String handleUpdate(
-            @PathVariable("id") long id,
+    @PostMapping("save")
+    public String handleCreate(
             @Valid @ModelAttribute("form") AuthorViewModel form,
-            BindingResult result) {
-
-        if (!form.getId().equals(id)) {
-            result.rejectValue(
-                    "id",
-                    "id error",
-                    "Id doesn't match");
-        }
+            BindingResult result) throws AppValidationException {
 
         if (result.hasErrors()) {
-            return "author/update";
+            return "/author/create";
         }
 
-        authorService.update(form);
-
-        return "redirect:/admin/authors/";
+        authorService.save(form);
+        return "redirect:" + INDEX_URL;
     }
+
     @GetMapping("delete/{id}")
     public String handleDelete(
             @PathVariable("id") long id) {
         authorService.delete(id);
-        return "redirect:/admin/authors/";
+        return "redirect:" + INDEX_URL;
     }
+
 }
